tests/parser/assign_no_lvalue.expected
<string>:2:5: error: expected lvalue on the left side of assignment
    4 + 5 = 8;
    ^^^^^